<resources>
    <string name="app_name">SnsApp</string>
    <string name="button_login_text">로그인</string>
    <string name="button_sign_up_text">가입</string>
    <string name="home_card_title">인기 카드 : 카드를 클릭해 보세요.</string>
    <string name="tab_home_title">홈</string>
    <string name="tab_image_feed_title">사진 피드</string>
    <string name="button_logout_text">로그 아웃</string>
    <string name="home_user_title">인기 유저: 유저를 클릭해보세요.</string>
    <string name="error_load_home_content">인기 데이터를 불러오지 못했습니다. 다시 시도해주세요.</string>
    <string name="error_load_card">카드 데이터를 불러오지 못했습니다.</string>
    <string name="edittext_hint_nickname">닉네임</string>
    <string name="edittext_hint_introduction">소개</string>
    <string name="edittext_hint_password">비밀번호</string>
    <string name="error_input_nickname">닉네임을 입력해주세요</string>
    <string name="error_input_introduction">소개 글을 입력해주세요</string>
    <string name="error_join_message">회원가입에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="error_invalid_password">잘못된 패스워드 입니다. 다시 입력해 주세요</string>
    <string name="error_login_message">로그인에 실패했습니다. 다시 시도해 주세요</string>
    <string name="user_detail_nickname">닉네임: %s</string>
    <string name="user_detail_introduction">소개: %s</string>
    <string name="title_recommend">추천 카드: 카드를 클릭해보세요</string>
    <string name="error_load_card_detail">카드 상세 정보를 가져오지 못했습니다. 다시 시도해주세요</string>
</resources>