<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.egiwon.snsapp.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_nickname"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_introduction"
            android:visibility="@{vm.isLogin? View.GONE : View.VISIBLE }"
            app:layout_constraintTop_toBottomOf="@id/edit_nickname" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_password"
            app:layout_constraintTop_toBottomOf="@id/edit_introduction" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.isLogin ? @string/button_login_text : @string/button_sign_up_text}"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            tools:text="@string/button_sign_up_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>